--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -87,7 +87,7 @@ header {
 
 /* Footer Structure */
 footer {
-  margin-top: 2rem;
+  margin-top: 1rem;
   padding: 4rem 0;
   text-align: center;
 }
